# diffy

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GUI-IMPROVEMENTS.md  GUI-ROADMAP.md  LICENSE  Makefile  README.md  REVIEW-ROADMAP.md  ROADMAP.md  TODO.md  build-windows.cmd  meson.build  vcpkg.json
.github/workflows/: ci.yml
cli/: CMakeLists.txt  diffy_main.cc  tty.cc  tty.hpp
docs/: binary-diff-roadmap.md  binary-diff.md  image-diff-roadmap.md
extras/: ci.sh  diffy-git  git-diffy  git-extract-test-cases  make-macos-app.sh  meson_compile_commands_patcher.py  theme_inverted.conf
gui/: CMakeLists.txt
gui/src/: diff_bridge.cc  diff_bridge.hpp  main.cpp  pr_cache.cc  pr_cache.hpp  repo_model.cc  repo_model.hpp  text_layout.cc  text_layout.hpp
gui/src/review/: auth.hpp  capabilities.hpp  conformance.cc  conformance.hpp  http_client.hpp  http_curl.cc  http_mac.mm  http_win.cpp  link_header.cc  link_header.hpp  log.cc  log.hpp  mock_http_client.hpp  model.hpp  registry.cc  registry.hpp  result.hpp  review.cc  review.hpp  review_provider.hpp  secret_store.cc  secret_store.hpp  secret_store_mac.mm  secret_store_win.cpp
gui/src/review/providers/: bitbucket_cloud.cc  bitbucket_cloud.hpp  github.cc  github.hpp
gui/tests/: bitbucket_cloud_tests.cc  conformance_tests.cc  github_tests.cc  registry_tests.cc  repo_model_tests.cc  review_tests.cc  text_layout_tests.cc
gui/ui/: app-window.slint
libdiffy/: CMakeLists.txt
libdiffy/algorithms/: algorithm.hpp  algorithm_tests.cc  myers_greedy.hpp  myers_linear.hpp  needleman_wunsch.hpp  patience.hpp
libdiffy/binary/: chunker.cc  chunker.hpp  hex_align.cc  hex_align.hpp  hex_align_tests.cc
libdiffy/config/: config.cc  config.hpp  config_tests.cc  gui_config.cc  gui_config.hpp  gui_config_tests.cc  repos.cc  repos.hpp  repos_tests.cc  theme_syntax_tests.cc
libdiffy/highlight/: highlight_group.cc  highlight_group.hpp  highlight_group_tests.cc  highlight_palette.cc  highlight_palette.hpp  language.cc  language.hpp  language_tests.cc  language_ts.hpp  scope.cc  scope.hpp  scope_tests.cc  syntax_highlighter.cc  syntax_highlighter.hpp  syntax_highlighter_tests.cc  treesitter.cmake
libdiffy/highlight/queries/: cmake.scm
libdiffy/image/: decode.cc  decode.hpp  image_diff.cc  image_diff.hpp  image_diff_tests.cc  image_info.cc  image_info.hpp  image_info_tests.cc  term_image.cc  term_image.hpp  term_image_tests.cc
libdiffy/output/: column_view.cc  column_view.hpp  column_view_tests.cc  hex_column.cc  hex_column.hpp  hex_common.hpp  hex_common_tests.cc  hex_unified.cc  hex_unified.hpp  render_corpus_tests.cc  render_test_util.hpp  theme_tests.cc  unified.cc  unified.hpp  unified_tests.cc
libdiffy/processing/: diff_hunk.cc  diff_hunk.hpp  diff_hunk_annotate.cc  diff_hunk_annotate.hpp  diff_hunk_annotate_tests.cc  indent_heuristic.cc  indent_heuristic.hpp  indent_heuristic_tests.cc  tokenizer.cc  tokenizer.hpp  tokenizer_tests.cc
libdiffy/render/: diff_pipeline.cc  diff_pipeline.hpp  diff_view_model.cc  diff_view_model.hpp  diff_view_model_tests.cc  hex_view_model.cc  hex_view_model.hpp  hex_view_model_tests.cc
libdiffy/util/: binary_detect.cc  binary_detect.hpp  binary_detect_tests.cc  bipolar_array.hpp  color.cc  color_tests.cc  display_text.cc  display_text.hpp  display_text_tests.cc  hash.cc  hash.hpp  mapped_file.cc  mapped_file.hpp  mapped_file_tests.cc  read_bytes.cc  read_bytes.hpp  readlines.cc  readlines.hpp  readlines_tests.cc  utf8decode.cc  utf8decode.hpp  utf8decode_tests.cc
src/: diffy_main.cc
src/algorithms/: algorithm.hpp  myers_greedy.hpp  myers_linear.hpp  patience.hpp  streaming_hybrid.hpp  streaming_hybrid_tests.cc
src/config/: config.cc  config.hpp
src/config/parser/: README.md  TODO.md  config_parser.cc  config_parser.hpp  config_parser_serialization_tests.cc  config_parser_tests.cc  config_parser_utils.cc  config_parser_utils.hpp  config_tokenizer.cc  config_tokenizer.hpp  config_tokenizer_tests.cc  ordered_map.hpp
src/output/: column_view.cc  column_view.hpp  edit_dump.cc  edit_dump.hpp  render_corpus_tests.cc  side_by_side.cc  side_by_side.hpp  theme_tests.cc  unified.cc  unified.hpp
src/processing/: context_suggestion.cc  context_suggestion.hpp  context_suggestion_tests.cc  diff_hunk.cc  diff_hunk.hpp  diff_hunk_annotate.cc  diff_hunk_annotate.hpp  diff_hunk_streaming.hpp  diff_hunk_tests.cc  tokenizer.cc  tokenizer.hpp  tokenizer_tests.cc
src/util/: bipolar_array.hpp  bipolar_array_tests.cc  color.cc  color.hpp  ordered_task_queue.hpp  readlines.cc  readlines.hpp  readlines_tests.cc  thread_pool.hpp  tty.cc  tty.hpp  utf8decode.cc  utf8decode.hpp
src/util/config_parser/: README.md  config_parser.cc  config_parser.hpp  config_parser_serialization_tests.cc  config_parser_tests.cc  config_parser_utils.cc  config_parser_utils.hpp  config_serializer.cc  config_serializer.hpp  config_serializer_tests.cc  config_tokenizer.cc  config_tokenizer.hpp  ordered_map.hpp
subprojects/config_parser/: CMakeLists.txt  README.md  meson.build
subprojects/config_parser/src/config_parser/: config_parser.cc  config_parser.hpp  config_parser_tests.cc  config_parser_utils.hpp  config_serializer.cc  config_serializer_tests.cc  config_tokenizer.cc  config_tokenizer.hpp  config_tokenizer_matcher.cc  config_tokenizer_matcher.hpp  config_tokenizer_matcher_tests.cc  config_tokenizer_tests.cc
subprojects/getopt/: CMakeLists.txt  getopt.cc  meson.build
subprojects/json/: CMakeLists.txt
tests/: CMakeLists.txt  difftest_corpus.py  testsuite.py
tests/golden/expected/: bin_chunk_sidebyside.out  bin_chunk_unified.out  bin_sidebyside.out  bin_unified_color.out  bin_unified_plain.out  sidebyside_color.out  unified_color.out  unified_dracula.out  unified_plain.out
tests/golden/inputs/: a.c  b.c
tests/test_cases/icdiff_128/: 0a  0b
